need to delete profile pade but working mydogs page

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "NODE_ENV=test node_modules/mocha/bin/mocha"
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha",
+    "seed": "node seed.js"
   },
   "license": "ISC",
   "devDependencies": {
